add cpp template file to notebook

--- a/notebook/notebook.tex
+++ b/notebook/notebook.tex
@@ -23,4 +23,6 @@
 \subsection{Min cost max bipartite matching} \code{mincostmatching.cpp}
 \subsection{Min cut} \code{mincut.cpp}
 \subsection{Graph cut inference} \code{graphcutinference.cpp}
+\section{Misc}
+\subsection{t.cpp} \code{t.cpp}
 \end{document}
