add 2SAT solver

--- a/notebook/notebook.tex
+++ b/notebook/notebook.tex
@@ -32,6 +32,7 @@
 \subsection{Min cost max bipartite matching} \code{MinCostMatching.cpp}
 \subsection{Min cut} \code{MinCut.cpp}
 \subsection{Graph cut inference} \code{GraphCutInference.cpp}
+\subsection{2SAT solver} \code{TwoSat.cpp}
 \section{Geometry}
 \subsection{Convex hull} \code{ConvexHull.cpp}
 \subsection{Miscellaneous geometry} \code{Geometry.cpp}
